[fix] CSS overflow [add] discord link

--- a/src/assets/css/hero.scss
+++ b/src/assets/css/hero.scss
@@ -11,8 +11,6 @@ $bar-height: 80%;
 }
 
 .ui-section {
-  height: calc(100vh - 64px);
-  width: 100vw;
   display: flex;
   flex-direction: row;
   justify-content: center;
