--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -49,7 +49,7 @@ html {
 }
 
 .headroom--pinned {
-  z-index: 2 !important;
+  z-index: 3 !important;
   background-color: $primary;
 }
 
